Changed Z-Index to fix overlap with sidebar

--- a/client/src/components/layout/Navbar/Navbar.scss
+++ b/client/src/components/layout/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
     height: 60px;
     width:100vw;
     background: $primary;
-    z-index: 1;
+    z-index: 2;
     display:flex;
     justify-content: space-between;
     position:fixed;
